packages/babel-core/test/fixtures/errors/use-exclude-in-preset/my-preset.js
module.exports = function myPreset() {
  return { exclude: /node_modules/ };
};
